--- a/.helm/slurm-sre-auth-service/templates/deployment.yaml
+++ b/.helm/slurm-sre-auth-service/templates/deployment.yaml
@@ -34,8 +34,11 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: AUTH_SERVICE_ADDRESS
+              value: {{ .Values.env.AUTH_SERVICE_ADDRESS }}
             - name: AUTH_SERVICE_HEADER
+              value: {{ .Values.env.AUTH_SERVICE_HEADER }}
             - name: AUTH_SERVICE_TOKEN
+              value: {{ .Values.env.AUTH_SERVICE_TOKEN }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
